<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/murdoch_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_marginBottom="@dimen/dips_sixteen"
            android:src="@drawable/mm_header_sm"/>

        <EditText
            style="@style/EditTextBody"
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_edittext_hint"
            android:textColorHint="@color/editTextHint"
            android:inputType="text"/>

        <TextView
            style="@style/TextBody"
            android:id="@+id/instructions_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions" />

        <TextView
            style="@style/TextBody.EditText"
            android:id="@+id/question_one_city_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_one" />

        <EditText
            style="@style/EditTextBody"
            android:id="@+id/answer_question_one_city_edittext_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                style="@style/TextBody"
                android:id="@+id/question_two_aunts_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_two" />
            <CheckBox
                style="@style/BoxesLeft"
                android:id="@+id/answer_two_begonia_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_two_aunts_text_view"
                android:text="@string/answer_two_begonia" />
            <CheckBox
                style="@style/BoxesLeft"
                android:id="@+id/answer_two_marigold_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_two_begonia_checkbox"
                android:text="@string/answer_two_marigold" />
            <CheckBox
                style="@style/BoxesLeft"
                android:id="@+id/answer_two_eve_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_two_marigold_checkbox"
                android:text="@string/answer_two_eve" />
            <CheckBox
                style="@style/BoxesRight"
                android:id="@+id/answer_two_charlotte_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/answer_two_begonia_checkbox"
                android:layout_alignLeft="@id/answer_two_grace_checkbox"
                android:layout_below="@id/question_two_aunts_text_view"
                android:text="@string/answer_two_charlotte" />
            <CheckBox
                style="@style/BoxesRight"
                android:id="@+id/answer_two_grace_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/answer_two_marigold_checkbox"
                android:layout_marginLeft="@dimen/dips_twentyfour"
                android:layout_below="@id/answer_two_charlotte_checkbox"
                android:text="@string/answer_two_grace" />
            <CheckBox
                style="@style/BoxesRight"
                android:id="@+id/answer_two_azalea_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/answer_two_eve_checkbox"
                android:layout_alignLeft="@id/answer_two_grace_checkbox"
                android:layout_below="@id/answer_two_grace_checkbox"
                android:text="@string/answer_two_azalea" />
        </RelativeLayout>

        <TextView
            style="@style/TextBody.AfterBoxes"
            android:id="@+id/question_three_criminal_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_three" />

        <RadioGroup
            android:id="@+id/answer_three_criminal_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/RadioButtons"
                android:id="@+id/answer_three_criminal_meyers_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_three_meyers"
                android:buttonTint="@color/radioButton"/>

            <RadioButton
                style="@style/RadioButtons"
                android:id="@+id/answer_three_criminal_pendrick_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_three_pendrick"/>

            <RadioButton
                style="@style/RadioButtons"
                android:id="@+id/answer_three_criminal_gillies_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_three_gillies"/>

            <RadioButton
                style="@style/RadioButtons"
                android:id="@+id/answer_three_criminal_pearce_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_three_pearce"/>
        </RadioGroup>

        <TextView
            style="@style/TextBody.AfterBoxes"
            android:id="@+id/question_four_fingerprints_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_four"/>
        <EditText
            style="@style/EditTextBody"
            android:id="@+id/answer_four_fingerprints_edittext_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                style="@style/TextBody"
                android:id="@+id/question_five_historical_figures_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_five"/>

            <CheckBox
                style="@style/BoxesLeft"
                android:id="@+id/answer_five_historical_figures_tesla_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_five_historical_figures_text_view"
                android:text="@string/answer_five_tesla"/>

            <CheckBox
                style="@style/BoxesLeft"
                android:id="@+id/answer_five_historical_figures_ford_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_five_historical_figures_tesla_checkbox"
                android:text="@string/answer_five_ford"/>

            <CheckBox
                style="@style/BoxesLeft"
                android:id="@+id/answer_five_historical_figures_oakley_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_five_historical_figures_ford_checkbox"
                android:text="@string/answer_five_oakley"/>

            <CheckBox
                style="@style/BoxesRight"
                android:id="@+id/answer_five_historical_figures_london_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_five_historical_figures_text_view"
                android:layout_toRightOf="@id/answer_five_historical_figures_tesla_checkbox"
                android:layout_alignLeft="@id/answer_five_historical_figures_wells_checkbox"
                android:text="@string/answer_five_london"/>

            <CheckBox
                style="@style/BoxesRight"
                android:id="@+id/answer_five_historical_figures_houdini_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/answer_five_historical_figures_wells_checkbox"
                android:layout_below="@id/answer_five_historical_figures_london_checkbox"
                android:layout_toRightOf="@id/answer_five_historical_figures_ford_checkbox"
                android:text="@string/answer_five_houdini"/>

            <CheckBox
                style="@style/BoxesRight"
                android:id="@+id/answer_five_historical_figures_wells_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dips_twentyfour"
                android:layout_below="@id/answer_five_historical_figures_houdini_checkbox"
                android:layout_toRightOf="@id/answer_five_historical_figures_oakley_checkbox"
                android:text="@string/answer_five_wells"/>
        </RelativeLayout>

        <TextView
            style="@style/TextBody.AfterBoxes"
            android:id="@+id/question_six_hobby_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_six"/>
        <EditText
            style="@style/EditTextBody"
            android:id="@+id/answer_six_hobby_edittext_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            style="@style/TextBody"
            android:id="@+id/question_seven_alienist_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_seven"/>
        <RadioGroup
            android:id="@+id/answer_seven_psychologist_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/RadioButtons"
                android:id="@+id/answer_seven_investigator_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_seven_investigator"/>

            <RadioButton
                style="@style/RadioButtons"
                android:id="@+id/answer_seven_alienist_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_seven_alienist"/>

            <RadioButton
                style="@style/RadioButtons"
                android:id="@+id/answer_seven_actress_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_seven_actress"/>

            <RadioButton
                style="@style/RadioButtons"
                android:id="@+id/answer_seven_mother_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_seven_mother"/>
        </RadioGroup>

        <TextView
            style="@style/TextBody.AfterBoxes"
            android:id="@+id/question_eight_nudist_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_eight"/>

        <RadioGroup
            android:id="@+id/answer_eight_nudist_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/RadioButtons"
                android:id="@+id/answer_eight_nudist_true_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_eight_true"/>

            <RadioButton
                style="@style/RadioButtons"
                android:id="@+id/answer_eight_nudist_false_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_eight_false"/>
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                style="@style/TextBody.AfterBoxes"
                android:id="@+id/question_nine_wonderland_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_nine"/>

            <CheckBox
                style="@style/BoxesLeft"
                android:id="@+id/answer_nine_wonderland_hatter_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_nine_wonderland_text_view"
                android:text="@string/answer_nine_hatter"/>

            <CheckBox
                style="@style/BoxesLeft"
                android:id="@+id/answer_nine_wonderland_queen_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_nine_wonderland_hatter_checkbox"
                android:text="@string/answer_nine_queen"/>

            <CheckBox
                style="@style/BoxesLeft"
                android:id="@+id/answer_nine_wonderland_turtle_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_nine_wonderland_queen_checkbox"
                android:text="@string/answer_nine_turtle"/>

            <CheckBox
                style="@style/BoxesRight"
                android:id="@+id/answer_nine_wonderland_alice_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_nine_wonderland_text_view"
                android:layout_toRightOf="@id/answer_nine_wonderland_hatter_checkbox"
                android:layout_alignLeft="@id/answer_nine_wonderland_cat_checkbox"
                android:text="@string/answer_nine_alice"/>

            <CheckBox
                style="@style/BoxesRight"
                android:id="@+id/answer_nine_wonderland_cat_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dips_sixteen"
                android:layout_below="@id/answer_nine_wonderland_alice_checkbox"
                android:layout_toRightOf="@id/answer_nine_wonderland_queen_checkbox"
                android:text="@string/answer_nine_cat"/>

            <CheckBox
                style="@style/BoxesRight"
                android:id="@+id/answer_nine_wonderland_frog_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_nine_wonderland_cat_checkbox"
                android:layout_toRightOf="@id/answer_nine_wonderland_turtle_checkbox"
                android:layout_alignLeft="@id/answer_nine_wonderland_cat_checkbox"
                android:text="@string/answer_nine_frog"/>
        </RelativeLayout>

        <TextView
            style="@style/TextBody.AfterBoxes"
            android:id="@+id/question_ten_greenfairy_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_ten"/>

        <EditText
            style="@style/EditTextBody"
            android:id="@+id/answer_ten_greenfairy_edittext_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <Button
            style="@style/Buttons"
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitAnswers"
            android:text="@string/submit_answers_button" />

        <Button
            style="@style/Buttons"
            android:id="@+id/try_quiz_again_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="resetQuiz"
            android:text="@string/try_again_button"/>

    </LinearLayout>

</ScrollView>